--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,14 @@ code {
 body {
   @apply bg-orange-100;
 }
+
+@layer utilities {
+  .no-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+}
