holy authentication batman!

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ code {
     monospace;
 } */
 
+@import url('https://rsms.me/inter/inter.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,6 +21,14 @@ code {
 @layer base {
   body {
     @apply bg-orange-100;
+  }
+  html {
+    font-family: 'Inter', sans-serif;
+  }
+  @supports (font-variation-settings: normal) {
+    html {
+      font-family: 'Inter var', sans-serif;
+    }
   }
 }
 
